--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <title>Lagoona - сеть отелей</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/normalize.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
@@ -543,7 +544,7 @@
           </li>
           <li class="advantages-item">
             <svg class="advantages-icon" id="security-box" version="1.1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 512 512"
               style="enable-background:new 0 0 512 512;" xml:space="preserve">
               <style type="text/css">
                 .st0 {
@@ -597,7 +598,7 @@
           </li>
           <li class="advantages-item">
             <svg class="advantages-icon" id="swimming-pool" version="1.1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 512 512"
               style="enable-background:new 0 0 512 512;" xml:space="preserve">
               <style type="text/css">
                 .st0 {
