Позиционирование hero-section, "О нас", "Услуги"

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <main>
 
-    <section class="section-hero">
+    <section class="section section-hero">
       <div class="container hero-container">
 
         <div class="booking-block">
@@ -99,13 +99,15 @@
               <strong class="special-offer-title">
                 Номера категории люкс
               </strong>
-              <div class="special-offer-price">
-                от 5 000 р
+              <div class="special-offer-more-block">
+                <div class="special-offer-price">
+                  от 5 000 р
+                </div>
+                <a class="special-offer-more" href="#">
+                  Подробнее
+                  <span class="special-offer-arrow-icon"></span>
+                </a>
               </div>
-              <a class="special-offer-more" href="#">
-                Подробнее
-                <span class="special-offer-arrow-icon"></span>
-              </a>
             </div>
           </div>
         </div>
@@ -113,7 +115,7 @@
       </div>
     </section>
 
-    <section class="about">
+    <section class="section section-about">
       <div class="container">
         <h2 class="section-heading">
           О нас
@@ -128,7 +130,7 @@
       </div>
     </section>
 
-    <section class="section-services">
+    <section class="section section-services">
       <div class="container">
         <h2 class="section-heading">
           Услуги
@@ -202,7 +204,7 @@
       </div>
     </section>
 
-    <section class="section-advantages">
+    <section class="section section-advantages">
       <div class="container">
         <h2 class="section-heading">
           Преимущества
@@ -252,7 +254,7 @@
       </div>
     </section>
 
-    <section class="section-places">
+    <section class="section section-places">
       <div class="container">
         <h2 class="section-heading">
           Размещение
