--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <section class="section section-services">
       <div class="container">
-        <h2 class="section-heading">
+        <h2 class="section-heading no-margin-heading">
           Услуги
         </h2>
         <ul class="services-list">
@@ -206,7 +206,7 @@
 
     <section class="section section-advantages">
       <div class="container">
-        <h2 class="section-heading">
+        <h2 class="section-heading no-margin-heading">
           Преимущества
         </h2>
         <ul class="advantages-list">
@@ -256,7 +256,7 @@
 
     <section class="section section-places">
       <div class="container">
-        <h2 class="section-heading">
+        <h2 class="section-heading no-margin-heading">
           Размещение
         </h2>
         <ul class="places-list">
@@ -264,259 +264,275 @@
             <div class="places-item-img-block">
               <img class="places-item-img" src="assets/img/23.png" alt="Lagoona española">
             </div>
-            <div class="places-item-text">
-              <div class="price-text">
-                <span class="price-text-span">
-                  от
-                </span>
-                <strong class="price-text-strong">
-                  4 698 р
-                </strong>
-                 / ночь
+            <div class="places-item-text-block">
+              <div class="places-item-text">
+                <div class="price-text">
+                  <span class="price-text-span">
+                    от
+                  </span>
+                  <strong class="price-text-strong">
+                    4 698 р
+                  </strong>
+                   / ночь
+                </div>
+                <div class="item-desc">
+                  Lagoona española
+                </div>
+                <div class="place-location">
+                  Барселона, Испания
+                </div>
               </div>
-              <div class="item-desc">
-                Lagoona española
+              <div class="places-rating">
+                <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-2.png" alt="">
               </div>
-              <div class="place-location">
-                Барселона, Испания
-              </div>
+              <a class="places-btn" href="#">
+                Номера
+              </a>
             </div>
-            <div class="places-rating">
-              <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-2.png" alt="">
-            </div>
-            <a class="places-btn" href="#">
-              Номера
-            </a>
           </li>
           <li class="places-item">
             <div class="places-item-img-block">
               <img class="places-item-img" src="assets/img/24.png" alt="Lagoona son típicas">
             </div>
-            <div class="places-item-text">
-              <div class="price-text">
-                <span class="price-text-span">
-                  от
-                </span>
-                <strong class="price-text-strong">
-                  5 148 р
-                </strong>
-                 / ночь
+            <div class="places-item-text-block">
+              <div class="places-item-text">
+                <div class="price-text">
+                  <span class="price-text-span">
+                    от
+                  </span>
+                  <strong class="price-text-strong">
+                    5 148 р
+                  </strong>
+                   / ночь
+                </div>
+                <div class="item-desc">
+                  Lagoona son típicas
+                </div>
+                <div class="place-location">
+                  Барселона, Испания
+                </div>
               </div>
-              <div class="item-desc">
-                Lagoona son típicas
+              <div class="places-rating">
+                <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
+                <img src="assets/img/star-1.png" alt="" >
+                <img src="assets/img/star-1.png" alt="" >
+                <img src="assets/img/star-1.png" alt="" >
+                <img src="assets/img/star-2.png" alt="" >
               </div>
-              <div class="place-location">
-                Барселона, Испания
-              </div>
-            </div>
-            <div class="places-rating">
-              <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
-              <img src="assets/img/star-1.png" alt="" >
-              <img src="assets/img/star-1.png" alt="" >
-              <img src="assets/img/star-1.png" alt="" >
-              <img src="assets/img/star-2.png" alt="" >
-            </div>
-            <a class="places-btn" href="#">
-              Номера
-            </a>
+              <a class="places-btn" href="#">
+                Номера
+              </a>
+            </div>   
           </li>
           <li class="places-item">
             <div class="places-item-img-block">
               <img class="places-item-img" src="assets/img/26.png" alt="Lagoona de la guerra">
             </div>
-            <div class="places-item-text">
-              <div class="price-text">
-                <span class="price-text-span">
-                  от
-                </span>
-                <strong class="price-text-strong">
-                  6 254 р
-                </strong>
-                 / ночь
+            <div class="places-item-text-block">
+              <div class="places-item-text">
+                <div class="price-text">
+                  <span class="price-text-span">
+                    от
+                  </span>
+                  <strong class="price-text-strong">
+                    6 254 р
+                  </strong>
+                   / ночь
+                </div>
+                <div class="item-desc">
+                  Lagoona de la guerra
+                </div>
+                <div class="place-location">
+                  Барселона, Испания
+                </div>
               </div>
-              <div class="item-desc">
-                Lagoona de la guerra
+              <div class="places-rating">
+                <img src="assets/img/star-1.png" alt="Рейтинг места размещения 5 из 5">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
               </div>
-              <div class="place-location">
-                Барселона, Испания
-              </div>
-            </div>
-            <div class="places-rating">
-              <img src="assets/img/star-1.png" alt="Рейтинг места размещения 5 из 5">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-            </div>
-            <a class="places-btn" href="#">
-              Номера
-            </a>
+              <a class="places-btn" href="#">
+                Номера
+              </a>
+            </div>     
           </li>
           <li class="places-item">
             <div class="places-item-img-block">
               <img class="places-item-img" src="assets/img/29.png" alt="Lagoona mentira piadosa">
             </div>
-            <div class="places-item-text">
-              <div class="price-text">
-                <span class="price-text-span">
-                  от
-                </span>
-                <strong class="price-text-strong">
-                  6 320 р
-                </strong>
-                 / ночь
+            <div class="places-item-text-block">
+              <div class="places-item-text">
+                <div class="price-text">
+                  <span class="price-text-span">
+                    от
+                  </span>
+                  <strong class="price-text-strong">
+                    6 320 р
+                  </strong>
+                   / ночь
+                </div>
+                <div class="item-desc">
+                  Lagoona mentira piadosa
+                </div>
+                <div class="place-location">
+                  Барселона, Испания
+                </div>
               </div>
-              <div class="item-desc">
-                Lagoona mentira piadosa
+              <div class="places-rating">
+                <img src="assets/img/star-1.png" alt="Рейтинг места размещения 5 из 5">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
               </div>
-              <div class="place-location">
-                Барселона, Испания
-              </div>
+              <a class="places-btn" href="#">
+                Номера
+              </a>
             </div>
-            <div class="places-rating">
-              <img src="assets/img/star-1.png" alt="Рейтинг места размещения 5 из 5">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-            </div>
-            <a class="places-btn" href="#">
-              Номера
-            </a>
           </li>
           <li class="places-item">
             <div class="places-item-img-block">
               <img class="places-item-img" src="assets/img/30.png" alt=" Lagoona empujar la creatividad">
             </div>
-            <div class="places-item-text">
-              <div class="price-text">
-                <span class="price-text-span">
-                  от
-                </span>
-                <strong class="price-text-strong">
-                  6 457 р
-                </strong>
-                 / ночь
+            <div class="places-item-text-block">
+              <div class="places-item-text">
+                <div class="price-text">
+                  <span class="price-text-span">
+                    от
+                  </span>
+                  <strong class="price-text-strong">
+                    6 457 р
+                  </strong>
+                   / ночь
+                </div>
+                <div class="item-desc">
+                  Lagoona empujar la creatividad
+                </div>
+                <div class="place-location">
+                  Барселона, Испания
+                </div>
               </div>
-              <div class="item-desc">
-                Lagoona empujar la creatividad
+              <div class="places-rating">
+                <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-2.png" alt="">
               </div>
-              <div class="place-location">
-                Барселона, Испания
-              </div>
-            </div>
-            <div class="places-rating">
-              <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-2.png" alt="">
-            </div>
-            <a class="places-btn" href="#">
-              Номера
-            </a>
+              <a class="places-btn" href="#">
+                Номера
+              </a>
+            </div> 
           </li>
           <li class="places-item">
             <div class="places-item-img-block">
               <img class="places-item-img" src="assets/img/31.png" alt="Lagoona el retorno">
             </div>
-            <div class="places-item-text">
-              <div class="price-text">
-                <span class="price-text-span">
-                  от
-                </span>
-                <strong class="price-text-strong">
-                  6 490 р
-                </strong>
-                 / ночь
+            <div class="places-item-text-block">
+              <div class="places-item-text">
+                <div class="price-text">
+                  <span class="price-text-span">
+                    от
+                  </span>
+                  <strong class="price-text-strong">
+                    6 490 р
+                  </strong>
+                   / ночь
+                </div>
+                <div class="item-desc">
+                  Lagoona el retorno
+                </div>
+                <div class="place-location">
+                  Барселона, Испания
+                </div>
               </div>
-              <div class="item-desc">
-                Lagoona el retorno
+              <div class="places-rating">
+                <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-2.png" alt="">
               </div>
-              <div class="place-location">
-                Барселона, Испания
-              </div>
+              <a class="places-btn" href="#">
+                Номера
+              </a>
             </div>
-            <div class="places-rating">
-              <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-2.png" alt="">
-            </div>
-            <a class="places-btn" href="#">
-              Номера
-            </a>
           </li>
           <li class="places-item">
             <div class="places-item-img-block">
               <img class="places-item-img" src="assets/img/27.png" alt="Lagoona enfermo terminó">
             </div>
-            <div class="places-item-text">
-              <div class="price-text">
-                <span class="price-text-span">
-                  от
-                </span>
-                <strong class="price-text-strong">
-                  6 505 р
-                </strong>
-                 / ночь
+            <div class="places-item-text-block">
+              <div class="places-item-text">
+                <div class="price-text">
+                  <span class="price-text-span">
+                    от
+                  </span>
+                  <strong class="price-text-strong">
+                    6 505 р
+                  </strong>
+                   / ночь
+                </div>
+                <div class="item-desc">
+                  Lagoona enfermo terminó
+                </div>
+                <div class="place-location">
+                  Барселона, Испания
+                </div>
               </div>
-              <div class="item-desc">
-                Lagoona enfermo terminó
+              <div class="places-rating">
+                <img src="assets/img/star-1.png" alt="Рейтинг места размещения 5 из 5">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
               </div>
-              <div class="place-location">
-                Барселона, Испания
-              </div>
+              <a class="places-btn" href="#">
+                Номера
+              </a>
             </div>
-            <div class="places-rating">
-              <img src="assets/img/star-1.png" alt="Рейтинг места размещения 5 из 5">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-            </div>
-            <a class="places-btn" href="#">
-              Номера
-            </a>
           </li>
           <li class="places-item">
             <div class="places-item-img-block">
               <img class="places-item-img" src="assets/img/32.png" alt="Lagoona suerte siguió siempre">
             </div>
-            <div class="places-item-text">
-              <div class="price-text">
-                <span class="price-text-span">
-                  от
-                </span>
-                <strong class="price-text-strong">
-                  6 824 р
-                </strong>
-                 / ночь
+            <div class="places-item-text-block">
+              <div class="places-item-text">
+                <div class="price-text">
+                  <span class="price-text-span">
+                    от
+                  </span>
+                  <strong class="price-text-strong">
+                    6 824 р
+                  </strong>
+                   / ночь
+                </div>
+                <div class="item-desc">
+                  Lagoona suerte siguió siempre
+                </div>
+                <div class="place-location">
+                  Барселона, Испания
+                </div>
               </div>
-              <div class="item-desc">
-                Lagoona suerte siguió siempre
+              <div class="places-rating">
+                <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-1.png" alt="">
+                <img src="assets/img/star-2.png" alt="">
               </div>
-              <div class="place-location">
-                Барселона, Испания
-              </div>
+              <a class="places-btn" href="#">
+                Номера
+              </a>
             </div>
-            <div class="places-rating">
-              <img src="assets/img/star-1.png" alt="Рейтинг места размещения 4 из 5">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-1.png" alt="">
-              <img src="assets/img/star-2.png" alt="">
-            </div>
-            <a class="places-btn" href="#">
-              Номера
-            </a>
           </li>
-          <li class="places-item">
+          <li class="places-item places-more-banner">
             <a class="places-more-link" href="#">
               <img class="places-more-img" src="assets/img/41.png" alt="Посмотреть все варианты">
               <div class="places-more-text">
