--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lagoona - сеть отелей</title>
   <link rel="stylesheet" href="/assets/css/normalize.css">
   <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
 </head>
 
-<body>
+<body class="body">
 
   <header class="header">
     <div class="container">
@@ -18,8 +20,11 @@
         <a class="logo" href="#">
           <img class="logo-img" src="assets/img/logo.png" alt="Lagoona - сеть отелей">
         </a>
-        <a class="phone" href="tel:+74953225448">+7 495 322 54 48</a>
+        <a class="phone" href="tel:+74953225448">
+          +7 495 322 54 48
+        </a>
         <a class="golden-text login" href="#">
+          <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
           Личный кабинет
         </a>
       </div>
