--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="services-item-text">
               <h3 class="services-item-title">
-                <a href="#">
+                <a class="services-item-link" href="#">
                   Эксклюзивное обслуживание
                   <span class="services-arrow-icon"></span>
                 </a>
@@ -163,7 +163,7 @@
             </div>
             <div class="services-item-text">
               <h3 class="services-item-title">
-                <a href="#">
+                <a class="services-item-link" href="#">
                   Аренда банкетных залов
                   <span class="services-arrow-icon"></span>
                 </a>
@@ -179,7 +179,7 @@
             </div>
             <div class="services-item-text">
               <h3 class="services-item-title">
-                <a href="#">
+                <a class="services-item-link" href="#">
                   Сауны, бассейны, бани, фитнес-залы
                   <span class="services-arrow-icon"></span>
                 </a>
@@ -195,7 +195,7 @@
             </div>
             <div class="services-item-text">
               <h3 class="services-item-title">
-                <a href="#">
+                <a class="services-item-link" href="#">
                   Охраняемые автомобильные стоянки
                   <span class="services-arrow-icon"></span>
                 </a>
@@ -216,41 +216,49 @@
         </h2>
         <ul class="advantages-list">
           <li class="advantages-item">
+            <span class="advantages-icon icon-bathhub"></span>
             <p class="item-desc">
               Идейные соображения высшего порядка, а также постоянный количественный рост
             </p>
           </li>
           <li class="advantages-item">
+            <span class="advantages-icon icon-hanger"></span>
             <p class="item-desc">
               Значимость этих проблем настолько очевидна, что вопрос остается открытым
             </p>
           </li>
           <li class="advantages-item">
+            <span class="advantages-icon icon-heating"></span>
             <p class="item-desc">
               Таким образом реализация плановых заданий играет важную роль для понимания
             </p>
           </li>
           <li class="advantages-item">
+            <span class="advantages-icon icon-hotel-key"></span>
             <p class="item-desc">
               Повседневная практика показывает, что сложившаяся структура организации
             </p>
           </li>
           <li class="advantages-item">
+            <span class="advantages-icon icon-parking"></span>
             <p class="item-desc">
               Равным образом рамки и место обучения кадров способствует подготовки сотрудника
             </p>
           </li>
           <li class="advantages-item">
+            <span class="advantages-icon icon-reception"></span>
             <p class="item-desc">
               Консультация с активом влечет за собой процесс внедрения услуг нашего сервиса
             </p>
           </li>
           <li class="advantages-item">
+            <span class="advantages-icon icon-security-box"></span>
             <p class="item-desc">
               Повседневная практика показывает, что дальнейшее развитие различных форм
             </p>
           </li>
           <li class="advantages-item">
+            <span class="advantages-icon icon-swimming-pool"></span>
             <p class="item-desc">
               Значимость этого настолько очевидна, что консультация наших экспертов помогает
             </p>
@@ -280,7 +288,7 @@
                   </strong>
                    / ночь
                 </div>
-                <div class="item-desc">
+                <div class="place-name">
                   Lagoona española
                 </div>
                 <div class="place-location">
@@ -314,7 +322,7 @@
                   </strong>
                    / ночь
                 </div>
-                <div class="item-desc">
+                <div class="place-name">
                   Lagoona son típicas
                 </div>
                 <div class="place-location">
@@ -348,7 +356,7 @@
                   </strong>
                    / ночь
                 </div>
-                <div class="item-desc">
+                <div class="place-name">
                   Lagoona de la guerra
                 </div>
                 <div class="place-location">
@@ -382,7 +390,7 @@
                   </strong>
                    / ночь
                 </div>
-                <div class="item-desc">
+                <div class="place-name">
                   Lagoona mentira piadosa
                 </div>
                 <div class="place-location">
@@ -416,7 +424,7 @@
                   </strong>
                    / ночь
                 </div>
-                <div class="item-desc">
+                <div class="place-name">
                   Lagoona empujar la creatividad
                 </div>
                 <div class="place-location">
@@ -450,7 +458,7 @@
                   </strong>
                    / ночь
                 </div>
-                <div class="item-desc">
+                <div class="place-name">
                   Lagoona el retorno
                 </div>
                 <div class="place-location">
@@ -484,7 +492,7 @@
                   </strong>
                    / ночь
                 </div>
-                <div class="item-desc">
+                <div class="place-name">
                   Lagoona enfermo terminó
                 </div>
                 <div class="place-location">
@@ -518,7 +526,7 @@
                   </strong>
                    / ночь
                 </div>
-                <div class="item-desc">
+                <div class="place-name">
                   Lagoona suerte siguió siempre
                 </div>
                 <div class="place-location">
